# ai-engage-agentic

./: .env.example  README.md  app.py  appv2.py  chains copy.py  chains.py  chat_app.py  classes.py  main copy.py  main.py  pydantic-example.py  pyproject.toml  reindex.py
backend/: api.py
docs/: Representanet.txt  neymar.txt  plana.txt
faiss_index/: index.faiss  index.pkl
ols/: chains.py  chat_app.py
reflexion-agent/: chains.py  cool_classes.py  main.py  main_old.py  tool_executor.py
services/: Intranet_repository.py  Intranet_repository_s3.py
